--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -28,7 +28,7 @@
   background-image: url(https://res.cloudinary.com/standingdreams/image/upload/sdsite/svg/logo-v2.svg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 35px auto;
+  background-size: contain;
   height: 40px;
   overflow: hidden;
   position: relative;
@@ -37,7 +37,6 @@
   width: 35px;
 
   @include mappy-bp(tablet-vert) {
-    background-size: 50px auto;
     height: 75px;
     width: 50px;
   }
