--- a/src/scss/configs/_mixins.scss
+++ b/src/scss/configs/_mixins.scss
@@ -46,7 +46,7 @@
   width: $width;
 }
 
-@mixin keyframes( $animationName ) {
+@mixin keyframes($animationName) {
   @-webkit-keyframes #{$animationName} {
     @content;
   }
@@ -69,11 +69,13 @@
     color: $def;
   }
 
-  :-moz-placeholder { /* Firefox 18- */
+  :-moz-placeholder {
+    /* Firefox 18- */
     color: $def;
   }
 
-  ::-moz-placeholder {  /* Firefox 19+ */
+  ::-moz-placeholder {
+    /* Firefox 19+ */
     color: $def;
   }
 
@@ -133,4 +135,26 @@
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   width: $width;
+}
+
+/// Mixin to manage responsive breakpoints
+/// https://css-tricks.com/snippets/sass/mixin-manage-breakpoints/
+/// @author Hugo Giraudel
+/// @param {String} $breakpoint - Breakpoint name
+/// @require $breakpoints
+
+@mixin respond-to($breakpoint) {
+  // If the key exists in the map
+  @if map-has-key($breakpoints, $breakpoint) {
+    // Prints a media query based on the value
+    @media #{inspect(map-get($breakpoints, $breakpoint))} {
+      @content;
+    }
+  }
+
+  // If the key doesn't exist in the map
+  @else {
+    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+      + "Available breakpoints are: #{map-keys($breakpoints)}.";
+  }
 }
