--- a/src/scss/components/_listings.scss
+++ b/src/scss/components/_listings.scss
@@ -1,6 +1,11 @@
 .listings-wrapper {
   overflow: hidden;
   padding-bottom: 60px;
+  margin-top: 60px;
+
+  @include mappy-bp(tablet-vert) {
+    margin-top: 120px;
+  }
 
   .container {
     @include clearfix();
