--- a/src/scss/layouts/_containers.scss
+++ b/src/scss/layouts/_containers.scss
@@ -2,3 +2,11 @@
 #gatsby-focus-wrapper {
   height: 100%;
 }
+
+.main-wrapper {
+  margin-top: 60px;
+
+  @include mappy-bp(tablet-vert) {
+    margin-top: 120px;
+  }
+}
