--- a/src/scss/configs/_variables.scss
+++ b/src/scss/configs/_variables.scss
@@ -24,7 +24,7 @@ $bold: 700;
 $background: #fff;
 $text: #1a1a1a;
 $brand: #f45e2c;
-$color--outline: hsl(195, 91%, 57%);
+$color--outline: hsla(360, 100%, 100%, 0.30);
 
 //Base font size, used for EM calculations
 $base-font: 20px;
