--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -96,6 +96,10 @@
       &:hover {
         border-bottom: 2px solid #fff;
       }
+
+      &:focus {
+        background-color: $color--outline;
+      }
     }
   }
 
