Refactored markdown/blog area
- Accepts MDX
- Allows for scheduled posts

--- a/src/scss/components/_blog.scss
+++ b/src/scss/components/_blog.scss
@@ -6,8 +6,8 @@
   }
 
   &__header {
-    max-width: 620px;
     margin-bottom: 2em;
+    max-width: 620px;
   }
 
   &__date {
@@ -17,9 +17,9 @@
   }
 
   &__heading {
-    line-height: 1.25em;
     font-weight: 600;
     letter-spacing: -0.5px;
+    line-height: 1.25em;
   }
 
   &__content {
@@ -28,19 +28,21 @@
 
       code {
         background-color: darken($brand, 15%);
+        border-radius: 0.3em;
         font-size: 0.9em;
         padding: 0 5px;
+        white-space: normal;
       }
     }
 
     figure {
-      margin-bottom: 1em;
       display: block;
+      margin-bottom: 1em;
 
       @include mappy-bp(tablet-vert) {
-        position: relative;
         margin: 1em 0 2em;
         padding-left: 50px;
+        position: relative;
 
         &::before {
           background-color: $text;
@@ -62,12 +64,16 @@
         width: 100%;
 
         @include mappy-bp(tablet-vert) {
-          width: 680px;
           position: relative;
+          width: 680px;
           z-index: 1;
         }
       }
     }
+  }
+
+  .code-toolbar {
+    max-width: 620px;
   }
 
   pre {
@@ -78,6 +84,7 @@
     max-width: 620px;
     overflow-x: auto;
     padding: 20px;
+    position: relative;
     white-space: pre-wrap;
   }
 }
