--- a/src/scss/components/_listings.scss
+++ b/src/scss/components/_listings.scss
@@ -4,21 +4,22 @@
 
   .container {
     @include clearfix();
+
     transition: ease all 0.3s;
   }
 }
 
 .listings-nav {
+  margin-bottom: 5%;
   transition: ease all 0.3s;
   width: 100%;
-  margin-bottom: 5%;
 
   ul {
+    display: flex;
+    justify-content: space-between;
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: space-between;
   }
 
   li {
@@ -29,25 +30,24 @@
   }
 
   button {
-    color: $text;
+    color: rgba($text, 0.15);
     font-weight: $bold;
-    color: rgba($text, .15);
-    transition: ease all 0.3s;
     outline: none;
+    transition: ease all 0.3s;
 
     &:hover {
-      color: rgba($text, .25);
+      color: rgba($text, 0.25);
     }
 
     &.current__item {
-      color: rgba($text, .45);
+      color: rgba($text, 0.45);
     }
   }
 
   @include mappy-bp(phone-medium) {
     float: left;
-    width: 10%;
     margin-bottom: 0;
+    width: 10%;
 
     ul {
       display: block;
@@ -79,7 +79,7 @@
   width: 100%;
 
   @for $i from 1 through 100 {
-    $eleMobile: ($i * 32)-32;
+    $eleMobile: ($i * 32) - 32;
     $topPosition: $eleMobile + px;
 
     &:nth-child(#{$i}) {
@@ -89,7 +89,7 @@
 
   @include mappy-bp(tablet-vert) {
     @for $i from 1 through 100 {
-      $ele: ($i * 38)-38;
+      $ele: ($i * 38) - 38;
       $topPosition: $ele + px;
 
       &:nth-child(#{$i}) {
@@ -117,9 +117,9 @@
   }
 
   &__content {
-    width: 100%;
     display: block;
     transition: ease all 0.3s;
+    width: 100%;
 
     @include mappy-bp(phone-medium) {
       float: right;
@@ -163,6 +163,7 @@
 
   &__role {
     @include to_em(18px);
+
     color: $text;
     font-weight: $medium;
     margin: 0;
@@ -187,11 +188,11 @@
     }
 
     @include mappy-bp(tablet-vert) {
+      display: none;
       float: right;
       position: relative;
       transition: ease all 0.3s;
       width: 25%;
-      display: none;
 
       &.js-vid {
         cursor: pointer;
@@ -250,19 +251,19 @@
 
 .show-listings-item {
   .listings-item__role {
-    transform: translateY(0);
     display: block;
     opacity: 1;
+    transform: translateY(0);
 
     @keyframes slideDownFirst {
       0% {
-        transform: translateY(20px);
         opacity: 0;
+        transform: translateY(20px);
       }
 
       100% {
-        transform: translateY(0);
         opacity: 1;
+        transform: translateY(0);
       }
     }
 
@@ -270,19 +271,19 @@
   }
 
   .listings-item__copy {
-    transform: translateY(0);
-    opacity: 1;
     display: block;
+    opacity: 1;
+    transform: translateY(0);
 
     @keyframes slideDownSecond {
       0% {
-        transform: translateY(20px);
         opacity: 0;
+        transform: translateY(20px);
       }
 
       100% {
-        transform: translateY(0);
         opacity: 1;
+        transform: translateY(0);
       }
     }
 
@@ -290,8 +291,8 @@
   }
 
   .listings-item__thumbnail {
-    opacity: 1;
     display: block;
+    opacity: 1;
     right: 0;
     transform: translateX(0);
 
