--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -1,10 +1,10 @@
 .site-wrapper {
-  min-height: 100%;
   margin-bottom: -$footerHeight;
+  min-height: 100%;
 
   &::after {
-    display: block;
     content: "";
+    display: block;
     height: $footerHeight;
   }
 }
@@ -21,4 +21,8 @@
   @include mappy-bp(tablet-horiz) {
     padding-top: 120px;
   }
+}
+
+.strikethrough {
+  text-decoration: line-through;
 }
